Add project tracklist prototype

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,7 +166,7 @@ a.active {
 }
 
  #matapesRoot {
-		background-image: url(/images/home/3HC_BG.jpg);
+		background-image: url(/images/home/3hc_BGv2.jpg);
 	    background-size: cover ;
 	    background-repeat: no-repeat ;
 	    background-position: center ;
